Adicionando envio do email

--- a/app/src/main/res/layout/layout_activity_forgot_password.xml
+++ b/app/src/main/res/layout/layout_activity_forgot_password.xml
@@ -70,7 +70,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/labelSistemaEstacionamento">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/input_usuario_interno"
+                        android:id="@+id/input_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/white"
@@ -115,6 +115,13 @@
                     android:fontFamily="@font/montserrat"
                     android:text="@string/enviar"
                     android:textColor="#FFFFFF"
+                    app:layout_constraintEnd_toEndOf="@+id/input_usuario_carro"
+                    app:layout_constraintTop_toBottomOf="@+id/input_usuario_carro" />
+
+                <TextView
+                    android:id="@+id/message"
+                    android:layout_width="297dp"
+                    android:layout_height="21dp"
                     app:layout_constraintEnd_toEndOf="@+id/input_usuario_carro"
                     app:layout_constraintTop_toBottomOf="@+id/input_usuario_carro" />
 
